[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/coin.png" type="Texture" id=1]
[ext_resource path="res://src/items/powerup.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 34.0147

[sub_resource type="Animation" id=2]
resource_name = "expire"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "expire"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachine" id=10]
states/expire/node = SubResource( 4 )
states/expire/position = Vector2( 571, 61 )
states/idle/node = SubResource( 5 )
states/idle/position = Vector2( 261, 61 )
transitions = [ "idle", "expire", SubResource( 7 ) ]
start_node = "idle"
end_node = "expire"

[sub_resource type="AnimationNodeStateMachinePlayback" id=11]

[sub_resource type="Animation" id=12]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.105882, 0.101961, 0.14902, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "to_invisible"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0980392, 0.0941176, 0.141176, 0.929412 ), Color( 0.0980392, 0.0941176, 0.141176, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "double jump pover up
pres [e] to pick up", "" ]
}

[sub_resource type="Animation" id=14]
resource_name = "to_visible"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.105882, 0.101961, 0.14902, 0 ), Color( 0.0980392, 0.0941176, 0.141176, 0.929412 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "", "double jump pover up
pres [e] to pick up" ]
}

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "to_invisible"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "to_visible"

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=22]
states/idle/node = SubResource( 15 )
states/idle/position = Vector2( 311, 40 )
states/to_invisible/node = SubResource( 16 )
states/to_invisible/position = Vector2( 468, 161 )
states/to_visible/node = SubResource( 17 )
states/to_visible/position = Vector2( 108, 168 )
transitions = [ "idle", "to_visible", SubResource( 18 ), "to_invisible", "to_visible", SubResource( 19 ), "to_visible", "to_invisible", SubResource( 20 ), "to_invisible", "idle", SubResource( 21 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[node name="Area2D" type="Area2D"]
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 2.86102e-06 )
scale = Vector2( 1.00203, 0.995536 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/expire = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 10 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 11 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 1, 1 )
scale = Vector2( 2.13545, 2.13545 )
color = Color( 0.105882, 0.101961, 0.14902, 0 )
polygon = PoolVector2Array( -128, -128, -128, -64, 128, -64, 128, -128 )

[node name="Label" type="Label" parent="Polygon2D"]
margin_left = -127.373
margin_top = -127.373
margin_right = 128.627
margin_bottom = -63.3734
text = "double jump pover up
pres [e] to pick up"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Polygon2D"]
anims/idle = SubResource( 12 )
anims/to_invisible = SubResource( 13 )
anims/to_visible = SubResource( 14 )

[node name="AnimationTree2" type="AnimationTree" parent="Polygon2D"]
tree_root = SubResource( 22 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 23 )
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="tree_entered" from="AnimationTree" to="." method="_on_tree_entered"]
